# happy-sandbox

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
sandbox/: .zshrc  Dockerfile  entrypoint.sh
src/happy_sandbox/: auth.py  cli.py  credentials.py  daemon.py  daemon_client.py  encryption.py  machine_tool.py  session_supervisor.py
tests/: test_encryption_flow.py
