[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "happy-sandbox"
version = "0.1.0"
description = "CLI to launch the Claude sandbox Docker environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "docopt>=0.6.2",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
]

[project.scripts]
happy-sandbox = "happy_sandbox.cli:main"

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.uv]
dev-dependencies = [
  "black>=24.0",
  "mypy>=1.7",
]
